# computacao-grafica

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  README.md  flake.nix  main.cpp
src/: main.cpp
